templates/kube-prometheus/templates/alertmanager/networkpolicy.yaml
---
# Source: kube-prometheus/templates/alertmanager/networkpolicy.yaml
# Based on upstream configuration: https://github.com/prometheus-operator/kube-prometheus/commit/968cb8fd22a1e21e63e8702bc1c0a0a4547e6d15
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kube-prometheus-alertmanager
  namespace: "default"
  labels:
    app.kubernetes.io/instance: kube-prometheus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kube-prometheus
    app.kubernetes.io/version: 0.74.0
    helm.sh/chart: kube-prometheus-9.2.1
    app.kubernetes.io/component: alertmanager
spec:
  podSelector:
    matchLabels:
      
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/component: alertmanager
      alertmanager: kube-prometheus-alertmanager
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    
    - ports:
        - port: 8080
        - port: 9093
        - port: 9094
